style.css
body {
  min-height: 100vh;
  width: 100vw;
  overflow-x: hidden;
  box-sizing: border-box;
  background-color: #e7e7e7;
}
.container {
  display: flex;
  /* height: 100vh; */
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: auto;
}

.chessboard {
  display: grid;
  grid-template-columns: repeat(8, 60px);
  grid-template-rows: repeat(8, 60px);
  border: 5px solid #333;
}

.square {
  width: 60px;
  height: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 36px;
  font-weight: bold;
  cursor: pointer;
  text-decoration: none;
  user-select: none;
  position: relative;
}
.square:hover {
  opacity: 0.5;
  font-size: 40px;
}
.highlight {
  outline: 2px solid #333;
}
.movelight::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background: rgba(0, 247, 255, 0.219);
  z-index: 9;
}

.black {
  background-color: #769656;
}

.white {
  background-color: #eeeed2;
}

/* #debug {
  background: red;
} */

